# byte_and_bake

./: .env_example  .gitignore  DJANGO_HOW_TO.md  POETRY_HOW_TO.md  README.md  requirements.txt
baking_site/: manage.py  pyproject.toml  requirements.txt
baking_site/baking_site/: asgi.py  settings.py  urls.py  wsgi.py
baking_site/blog/: admin.py  constants.py  forms.py  models.py  urls.py  views.py
baking_site/blog/migrations/: 0001_initial.py  0002_alter_blogpost_options.py  0002_alter_post_body.py  0002_postimage.py  0003_postcategory.py  0003_rename_blogpost_post.py  0004_category_post_category_post_header_image.py  0004_rename_postcategory_category.py  0005_alter_category_options.py  0005_rename_category_name_category_name.py  0006_alter_category_options_alter_postimage_post.py  0007_post_snippet_alter_post_content.py
baking_site/blog/templates/: base.html  sidebar.html
baking_site/blog/tests/: test_forms.py  test_models.py  test_views.py
baking_site/converter/: constants.py  forms.py  urls.py  utils.py  views.py
baking_site/recipes/: admin.py  forms.py  models.py  urls.py  views.py
baking_site/recipes/migrations/: 0001_initial.py  0002_alter_recipe_category.py  0002_alter_recipe_ingredients_alter_recipe_method_and_more.py  0002_postimage.py  0002_recipe_story_time_alter_recipe_created_on.py  0003_alter_recipe_category.py  0003_alter_recipe_category_alter_recipe_image.py  (+7 more)
baking_site/registration/: forms.py  urls.py  views.py
baking_site/ricette/: forms.py  models.py  urls.py  views.py
baking_site/templates/: about.html  base.html  index.html
(+59 files in other folders)
