[tool.poetry]
name = "baking-site"
version = "0.1.0"
description = "Baking blog"
authors = ["escandellari <elisa.scandellari@gmail.com>"]
readme = "README.md"
packages = [{include = "baking_site"}]

[tool.poetry.dependencies]
python = "^3.11"
asgiref = "3.7.2"
click = "8.1.3"
colorama = "0.4.6"
crispy-bootstrap5 = "0.7"
cssbeautifier = "1.14.8"
django = "4.2.2"
django-ckeditor = "6.5.1"
django-crispy-forms = "2.0"
django-js-asset = "2.0.0"
django-rename-app = "0.1.6"
djlint = "1.31.0"
editorconfig = "0.12.3"
html-tag-names = "0.1.2"
html-void-elements = "0.1.0"
jsbeautifier = "1.14.8"
json5 = "0.9.14"
pathspec = "0.11.1"
pillow = "9.5.0"
psycopg2-binary = "2.9.6"
python-dotenv = "1.0.0"
pyyaml = "6.0"
regex = "2023.6.3"
six = "1.16.0"
sqlparse = "0.4.4"
tqdm = "4.65.0"
gunicorn = "20.1.0"
dj-database-url = "2.0.0"
typing-extensions = "4.7.1"
brotli = "1.0.9"
whitenoise = "6.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
